correção no put de CompanhiaAerea e Passagem que estavam dando erro 500